INCLUDES=-I$(top_srcdir)/include
noinst_LIBRARIES = libpreproc.a
libpreproc_a_SOURCES= create_infs.cc do_cofactor.cc   do_exquantify.cc   \
		      do_strength.cc other_preproc.cc do_applyinfs.cc do_depcluster.cc  \
                      do_exquantifyand.cc  do_pruning.cc init_preproc.cc \
                      preprocess.cc do_pruning_1.cc do_pruning_2.cc      \
                      do_pruning_restrict.cc do_flow.cc

