EXTRA_DIST= dlx2_cc_bug11.trace dlx2_cc.trace \
            slider_80_sat.ite slider_80_unsat.ite \
            dlx2_cc.trace.params \
            slider_80_sat.ite.params \
            slider_80_unsat.ite.params \
	    dlx2_cc_bug11.trace.params \
	    dlx2_cc_bug11.trace.Hjl.params \
	    dlx2_cc.trace.Hjl.params \
	    slider_80_sat.ite.Hjq.params \
	    slider_80_unsat.ite.Hjq.params \
	    dlx2_cc_bug11.trace.Hl.params \
	    dlx2_cc.trace.Hl.params \
	    12.trace.gz 12.trace.gz.params \
	    queue.14.prove \
	    queue.14.prove.Hjl.params \
	    queue.14.prove.Hjq.params \
	    queue.14.prove.Hl.params \
	    queue.14.prove.params \
	    barrel.7.prove \
	    barrel.7.prove.params
