EXTRA_DIST= dlx2_cc_bug11.trace dlx2_cc.trace \
            slider_80_sat.ite slider_80_unsat.ite \
            dlx2_cc.trace.params \
            slider_80_sat.ite.params \
            slider_80_unsat.ite.params \
	    dlx2_cc_bug11.trace.params \
	    dlx2_cc_bug11.trace.Hjl.params \
	    dlx2_cc.trace.Hjl.params \
	    slider_80_sat.ite.Hjq.params \
	    slider_80_unsat.ite.Hjq.params \
	    dlx2_cc_bug11.trace.Hl.params \
	    dlx2_cc.trace.Hl.params \
	    4.trace.gz 4.trace.gz.params \
	    queue.8.prove \
	    queue.8.prove.Hjl.params \
	    queue.8.prove.Hjq.params \
	    queue.8.prove.Hl.params \
	    queue.8.prove.params \
	    barrel.6.prove \
	    barrel.6.prove.params
