EXTRA_DIST= 12.trace.gz.params \
				dlx2_cc.trace.params \
				queue.14.prove.Hjq.params \
				queue.8.prove.params \
				4.trace.gz.params \
				dlx2_cc_bug11.trace.Hb.params \
				queue.14.prove.Hv.params \
				slider_80_sat.ite.Hjq.params \
				slider_80_sat.ite.simple.params \
				barrel.6.prove.params \
				dlx2_cc_bug11.trace.Hjl.params \
				queue.14.prove.params \
				slider_80_sat.ite.params \
				barrel.7.prove.params \
				dlx2_cc_bug11.trace.Hv.params \
				queue.8.prove.Hb.params \
				slider_80_unsat.ite.Hjq.params \
				dlx2_cc.trace.Hb.params \
				dlx2_cc_bug11.trace.params \
				queue.8.prove.Hjl.params \
				slider_80_unsat.ite.params \
				slider_80_unsat.ite.simple.params \
				dlx2_cc.trace.Hjl.params \
				queue.14.prove.Hb.params \
				queue.8.prove.Hjq.params \
				dlx2_cc.trace.Hv.params \
				queue.14.prove.Hjl.params \
				queue.8.prove.Hv.params \
				12.trace.gz \
				dlx2_cc.trace \
				queue.14.prove \
				queue.8.prove \
				4.trace.gz \
				dlx2_cc_bug11.trace \
				slider_80_sat.ite \
				barrel.6.prove \
				barrel.7.prove \
				slider_80_unsat.ite

