EXTRA_DIST= and1=_example.trace limp=_example.trace or+_example.trace \
	    and=_example.trace  lnimp=_example.trace  rimp=_example.trace \
	    and-_example.trace  nand=_example.trace   rnimp=_example.trace \
	    and+_example.trace  new_int_leaf.trace    xnor=_example.trace \
	    are_equal_example.trace  nor=_example.trace    xor=_example.trace \
	    or=_example.trace ite_example.trace        or-_example.trace \
	    and1=_example.trace.params and=_example.trace.params \
	    and-_example.trace.params and+_example.trace.params \
	    are_equal_example.trace.params ite_example.trace.params \
	    limp=_example.trace.params lnimp=_example.trace.params \
	    nand=_example.trace.params new_int_leaf.trace.params \
	    nor=_example.trace.params or=_example.trace.params \
	    or-_example.trace.params or+_example.trace.params \
	    rimp=_example.trace.params rnimp=_example.trace.params \
	    xnor=_example.trace.params xor=_example.trace.params
