EXTRA_DIST= and1_equ_example.trace limp_equ_example.trace or+_example.trace \
	    and_equ_example.trace  lnimp_equ_example.trace rimp_equ_example.trace \
	    and-_example.trace nand_equ_example.trace rnimp_equ_example.trace \
	    and+_example.trace new_int_leaf.trace  xnor_equ_example.trace \
	    are_equal_example.trace nor_equ_example.trace xor_equ_example.trace \
	    or_equ_example.trace ite_example.trace or-_example.trace \
	    and1_equ_example.trace.params and_equ_example.trace.params \
	    and-_example.trace.params and+_example.trace.params \
	    are_equal_example.trace.params ite_example.trace.params \
	    limp_equ_example.trace.params lnimp_equ_example.trace.params \
	    nand_equ_example.trace.params new_int_leaf.trace.params \
	    nor_equ_example.trace.params or_equ_example.trace.params \
	    or-_example.trace.params or+_example.trace.params \
	    rimp_equ_example.trace.params rnimp_equ_example.trace.params \
	    xnor_equ_example.trace.params xor_equ_example.trace.params
