INCLUDES=-I$(top_srcdir)/include -I$(top_srcdir)/src/cudd/include
sources= cpu_time.c prtime.c safe_mem.c strsav.c test-sav.c \
datalimit.c pathsearch.c ptime.c saveimage.c texpand.c \
cpu_stats.c getopt.c pipefork.c restart.c state.c test-res.c

noinst_LIBRARIES = libcuddutil.a
libcuddutil_a_SOURCES= $(sources)

